--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('path-to-your-galaxy-image.jpg') no-repeat center center fixed;
+    background: url('https://i.imgur.com/Gu4HzUN.jpeg') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
     line-height: 1.6;
